[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "factur-x"
description = "Factur-X and Order-X: electronic invoicing and ordering standards"
authors = [{name = "Alexis de Lattre", email = "alexis.delattre@akretion.com"}]
classifiers = [
    "Topic :: Office/Business :: Financial :: Accounting",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
readme = "README.rst"
keywords = ["e-invoice", "ZUGFeRD", "Factur-X", "Order-X", "e-procurement"]
license = {file = "LICENSE.txt"}
dependencies = [
    "pypdf>=5.3.0",
    "lxml",
]
requires-python = ">=3.9"
dynamic = ["version"]

[project.optional-dependencies]
schematron = ["saxonche"]
test = [
    "saxonche",
    "pytest",
    "coverage[toml]",
]

[project.urls]
Homepage = "https://github.com/akretion/factur-x"
Source = "https://github.com/akretion/factur-x"
Issues = "https://github.com/akretion/factur-x/issues"

[project.scripts]
facturx-pdfgen = "facturx.scripts.pdfgen:main"
facturx-pdfextractxml = "facturx.scripts.pdfextractxml:main"
facturx-xmlcheck = "facturx.scripts.xmlcheck:main"
# I consider the webservice scripts as a proof of concept, not real clean code
# facturx-webservice = "facturx.scripts.webservice:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
exclude = [
    "/.github",
]

[tool.hatch.build.targets.wheel]
packages = ["src/facturx"]

[tool.hatch.envs.test]
features = [
    "test"
]

[tool.ruff]
target-version = "py39"
fix = true

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "UP",
    "W",
]
ignore = [
]
exclude = [
    "docs/conf.py",
]

[tool.ruff.lint.isort]
known-first-party = []


[tool.coverage.run]
branch = true
source_pkgs = ["factur-x"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
]



[tool.towncrier]
package = "factur-x"
package_dir = "src"
filename = "HISTORY.rst"
directory = "news"
issue_format = "`#{issue} <https://github.com/akretion/factur-x/issues/{issue}>`_"
title_format = "{version} ({project_date})"
